force-app/main/default/objects/Account/fields/CP_Account_Name_Fu__c.field-meta.xml
<CustomField>
    <fullName>CP_Account_Name_Fu__c</fullName>
    <formula>CP_Account_Code__c &amp; &quot; &quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CP Account Name Full</label>
    <type>Text</type>
</CustomField>