force-app/main/default/objects/Account/fields/Credit_Control_Status__c.field-meta.xml
<CustomField>
    <fullName>Credit_Control_Status__c</fullName>
    <label>Credit Control Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal Chase</fullName>
            </value>
            <value>
                <fullName>Write-Off</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>