force-app/main/default/objects/Account/fields/Credit_Days__c.field-meta.xml
<CustomField>
    <fullName>Credit_Days__c</fullName>
    <label>Credit Days (DO NOT USE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>