force-app/main/default/objects/Account/fields/Credit_risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_risk__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>Credit risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Very Low</fullName>
            </value>
            <value>
                <fullName>Not Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>