force-app/main/default/objects/Account/fields/CreditControlManager__c.field-meta.xml
<CustomField>
    <fullName>CreditControlManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Control Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CreditControlManagers</relationshipName>
    <type>Lookup</type>
</CustomField>