force-app/main/default/objects/Account/fields/Creditsafe__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe__c</fullName>
    <label>Creditsafe Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>