force-app/main/default/objects/Account/fields/Creditsafe_Business_Reg_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Business_Reg_Number__c</fullName>
    <label>Creditsafe Business Reg Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>