force-app/main/default/objects/Account/fields/Creditsafe_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Phone_Number__c</fullName>
    <label>Creditsafe Phone Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>