force-app/main/default/objects/Account/fields/Creditsafe_Score_Description__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Score_Description__c</fullName>
    <label>Creditsafe Score Description</label>
    <type>TextArea</type>
</CustomField>