force-app/main/default/objects/Account/fields/Creditsafe_Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Total_Assets__c</fullName>
    <label>Creditsafe Total Assets</label>
    <length>20</length>
    <type>Text</type>
</CustomField>