force-app/main/default/objects/Account/fields/Creditsafe_Total_Liabilities__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Total_Liabilities__c</fullName>
    <label>Creditsafe Total Liabilities</label>
    <length>20</length>
    <type>Text</type>
</CustomField>