force-app/main/default/objects/Account/fields/Creditsafe_Trade_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Trade_Number_c__c</fullName>
    <label>Creditsafe Trade Number</label>
    <length>225</length>
    <type>Text</type>
</CustomField>