force-app/main/default/objects/Account/fields/Creditsafe_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_VAT_Number__c</fullName>
    <label>Creditsafe VAT Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>