force-app/main/default/objects/Account/fields/CS_APP__Company_Status__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Company_Status__c</fullName>
    <label>Company Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>