force-app/main/default/objects/Account/fields/CS_APP__Connect_Id__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Connect_Id__c</fullName>
    <externalId>true</externalId>
    <label>Connect Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>