force-app/main/default/objects/Account/fields/CS_APP__Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>