force-app/main/default/objects/Account/fields/CS_APP__Currency__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Currency__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>