force-app/main/default/objects/Account/fields/CS_APP__Days_Beyond_Term__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Days_Beyond_Term__c</fullName>
    <label>Days Beyond Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>