force-app/main/default/objects/Account/fields/CS_APP__International_Score__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__International_Score__c</fullName>
    <label>International Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>