force-app/main/default/objects/Account/fields/CS_APP__Language_Code__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Language_Code__c</fullName>
    <label>Language Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>