force-app/main/default/objects/Account/fields/CS_APP__Last_Cleansed_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Last_Cleansed_Date__c</fullName>
    <label>Last Cleansed Date</label>
    <type>Date</type>
</CustomField>