force-app/main/default/objects/Account/fields/CS_APP__Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>