force-app/main/default/objects/Account/fields/CS_APP__Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Net_Worth__c</fullName>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>