force-app/main/default/objects/Account/fields/CS_APP__Never_Match__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Never_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Never Match</label>
    <type>Checkbox</type>
</CustomField>