force-app/main/default/objects/Account/fields/CS_APP__PNumber__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__PNumber__c</fullName>
    <label>PNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>