force-app/main/default/objects/Account/fields/CS_APP__Provider_Description__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Provider_Description__c</fullName>
    <label>Provider Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>