force-app/main/default/objects/Account/fields/CS_APP__Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Reason_Code__c</fullName>
    <label>Reason Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>