force-app/main/default/objects/Account/fields/CS_APP__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CS_APP__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>