force-app/main/default/objects/Account/fields/CS_to_Contact_for_Price_Change__c.field-meta.xml
<CustomField>
    <fullName>CS_to_Contact_for_Price_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact for Price Change</label>
    <type>Checkbox</type>
</CustomField>