force-app/main/default/objects/Account/fields/Customer_roll_up__c.field-meta.xml
<CustomField>
    <fullName>Customer_roll_up__c</fullName>
    <formula>IF ( TEXT(Enqix_Dead_Live__c) = &quot;Live&quot;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer roll up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>