force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Real Estate</fullName>
            </value>
            <value>
                <fullName>Compliance Only</fullName>
            </value>
            <value>
                <fullName>Large Single Site</fullName>
            </value>
            <value>
                <fullName>National Group</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Regional Group</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>