force-app/main/default/objects/Account/fields/customer_stripeid__c.field-meta.xml
<CustomField>
    <fullName>customer_stripeid__c</fullName>
    <label>customer_stripeid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>