force-app/main/default/objects/Account/fields/Date_Made_Dead__c.field-meta.xml
<CustomField>
    <fullName>Date_Made_Dead__c</fullName>
    <formula>Enqix_Date_Made_Dead__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Made Dead</label>
    <type>Date</type>
</CustomField>