force-app/main/default/objects/Account/fields/Date_of_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Escalation__c</fullName>
    <label>Date of Escalation</label>
    <type>Date</type>
</CustomField>