force-app/main/default/objects/Account/fields/Days_Since_Last_Order_2__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Order_2__c</fullName>
    <formula>TODAY() - Enqix_Last_Order_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since the last order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>