force-app/main/default/objects/Account/fields/DaysBetweenOrders__c.field-meta.xml
<CustomField>
    <fullName>DaysBetweenOrders__c</fullName>
    <label>DaysBetweenOrders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>