force-app/main/default/objects/Account/fields/DaysSinceLastOrder__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastOrder__c</fullName>
    <formula>TODAY() - LastOrderDate__c</formula>
    <label>Days Since Last Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>