force-app/main/default/objects/Account/fields/dd_account_holder__c.field-meta.xml
<CustomField>
    <fullName>dd_account_holder__c</fullName>
    <label>dd_account_holder</label>
    <length>250</length>
    <type>Text</type>
</CustomField>