force-app/main/default/objects/Account/fields/dd_account_number__c.field-meta.xml
<CustomField>
    <fullName>dd_account_number__c</fullName>
    <label>dd_account_number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>