force-app/main/default/objects/Account/fields/dd_sort_code__c.field-meta.xml
<CustomField>
    <fullName>dd_sort_code__c</fullName>
    <label>dd_sort_code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>