force-app/main/default/objects/Account/fields/DDCode1__c.field-meta.xml
<CustomField>
    <fullName>DDCode1__c</fullName>
    <formula>IF(Paid_by_DD_Before__c=true,&apos;17&apos;,&apos;01&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DDCode1</label>
    <type>Text</type>
</CustomField>