force-app/main/default/objects/Account/fields/Delivery_Notes__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Notes__c</fullName>
    <label>Delivery Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>