force-app/main/default/objects/Account/fields/Direct_Debit_authorised__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_authorised__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Debit authorised</label>
    <type>Checkbox</type>
</CustomField>