force-app/main/default/objects/Account/fields/Direct_Debit_Authorised_Date__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Authorised_Date__c</fullName>
    <label>Direct Debit Authorised Date</label>
    <type>DateTime</type>
</CustomField>