force-app/main/default/objects/Account/fields/Direct_Debit_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Changed_By__c</fullName>
    <label>Direct Debit Changed By</label>
    <length>150</length>
    <type>Text</type>
</CustomField>