force-app/main/default/objects/Account/fields/Direct_Debit_Discount__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Discount__c</fullName>
    <defaultValue>IF($RecordType.Name = &quot;Account&quot;, 0, null)</defaultValue>
    <label>Direct Debit Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>