force-app/main/default/objects/Account/fields/Direct_Debit_Discount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Discount_Start_Date__c</fullName>
    <label>Direct Debit Discount Start Date</label>
    <type>DateTime</type>
</CustomField>