force-app/main/default/objects/Account/fields/Direct_Debit_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Provided_By__c</fullName>
    <inlineHelpText>Who has provide the DD details from this company?</inlineHelpText>
    <label>Direct Debit Provided By</label>
    <length>150</length>
    <type>Text</type>
</CustomField>