force-app/main/default/objects/Account/fields/Discount_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Discount_Start_Date</label>
    <type>Date</type>
</CustomField>