force-app/main/default/objects/Account/fields/Do_not_care_call__c.field-meta.xml
<CustomField>
    <fullName>Do_not_care_call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not care call</label>
    <type>Checkbox</type>
</CustomField>