force-app/main/default/objects/Account/fields/Don_t_Include_in_New_Win_Data__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Include_in_New_Win_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tick this to exclude the location from new win reporting</description>
    <inlineHelpText>tick this to exclude the location from new win reporting</inlineHelpText>
    <label>Don&apos;t Include in New Win Data</label>
    <type>Checkbox</type>
</CustomField>