force-app/main/default/objects/Account/fields/EBITDA_3_year_CAGR__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_3_year_CAGR__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>EBITDA 3 year CAGR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>