force-app/main/default/objects/Account/fields/EBITDA_5_Year_CAGR__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_5_Year_CAGR__c</fullName>
    <description>New Field for Finance Team, for Reports Only</description>
    <label>EBITDA 5 Year CAGR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>