force-app/main/default/objects/Account/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>