force-app/main/default/objects/Account/fields/EBITDA_Growth__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Growth__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>EBITDA Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>