force-app/main/default/objects/Account/fields/EffectiveAttribution__c.field-meta.xml
<CustomField>
    <fullName>EffectiveAttribution__c</fullName>
    <formula>IF(OR(RecordType.Name == &apos;Account&apos;, RecordType.Name == &apos;Partner&apos;, RecordType.Name == &apos;Supplier&apos;), TEXT(Attribution__c), TEXT(Parent.Attribution__c))</formula>
    <label>Effective Attribution</label>
    <type>Text</type>
</CustomField>