force-app/main/default/objects/Account/fields/EffectiveCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>EffectiveCurrencyCode__c</fullName>
    <formula>IF(OR(RecordType.Name == &apos;Account&apos;, RecordType.Name == &apos;Partner&apos;, RecordType.Name == &apos;Supplier&apos;), TEXT(CurrencyIsoCode), TEXT(Parent.CurrencyIsoCode))</formula>
    <label>Effective Currency Code</label>
    <type>Text</type>
</CustomField>