force-app/main/default/objects/Account/fields/EffectiveInvoiceFrequency__c.field-meta.xml
<CustomField>
    <fullName>EffectiveInvoiceFrequency__c</fullName>
    <formula>IF(NOT(ISBLANK(TEXT(InvoiceFrequency__c))), TEXT(InvoiceFrequency__c), TEXT(Parent.InvoiceFrequency__c))</formula>
    <label>Effective Invoice Frequency</label>
    <type>Text</type>
</CustomField>