force-app/main/default/objects/Account/fields/Employees_3_Year_CAGR__c.field-meta.xml
<CustomField>
    <fullName>Employees_3_Year_CAGR__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>Employees 3 Year CAGR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>