force-app/main/default/objects/Account/fields/Employees_Growth__c.field-meta.xml
<CustomField>
    <fullName>Employees_Growth__c</fullName>
    <description>requested by financial planning and analysis</description>
    <label>Employees Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>