force-app/main/default/objects/Account/fields/EmployersLiabilityInsurance__c.field-meta.xml
<CustomField>
    <fullName>EmployersLiabilityInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employers Liability Insurance</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SupplierDocuments__c.DocumentType__c</field>
            <operation>equals</operation>
            <value>Employers Liability Insurance</value>
        </filterItems>
        <filterItems>
            <field>SupplierDocuments__c.SupplierAccount__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>SupplierDocuments__c</referenceTo>
    <relationshipLabel>Suppliers (Employers Liability Insurance)</relationshipLabel>
    <relationshipName>MandatoryEmployersLiabilityInsurance</relationshipName>
    <type>Lookup</type>
</CustomField>