force-app/main/default/objects/Account/fields/Enqix_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Account_Type__c</fullName>
    <label>Enqix Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pay As You Go</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>