force-app/main/default/objects/Account/fields/Enqix_AddLocAllocs__c.field-meta.xml
<CustomField>
    <fullName>Enqix_AddLocAllocs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AddLocAllocs</label>
    <type>Checkbox</type>
</CustomField>