force-app/main/default/objects/Account/fields/Enqix_Classification__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Classification__c</fullName>
    <label>Enqix Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BID</fullName>
            </value>
            <value>
                <fullName>Indirect Large</fullName>
            </value>
            <value>
                <fullName>Indirect Medium</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Estate</fullName>
            </value>
            <value>
                <fullName>#N/A</fullName>
                <isActive>false</isActive>
                <label>#N/A</label>
            </value>
            <value>
                <fullName>Broker Large</fullName>
                <isActive>false</isActive>
                <label>Broker Large</label>
            </value>
            <value>
                <fullName>Broker Medium</fullName>
                <isActive>false</isActive>
                <label>Broker Medium</label>
            </value>
            <value>
                <fullName>Cleaner Large</fullName>
                <isActive>false</isActive>
                <label>Cleaner Large</label>
            </value>
            <value>
                <fullName>Cleaner Medium</fullName>
                <isActive>false</isActive>
                <label>Cleaner Medium</label>
            </value>
            <value>
                <fullName>KA Multi</fullName>
                <isActive>false</isActive>
                <label>KA Multi</label>
            </value>
            <value>
                <fullName>KA Single</fullName>
                <isActive>false</isActive>
                <label>KA Single</label>
            </value>
            <value>
                <fullName>Location</fullName>
                <isActive>false</isActive>
                <label>Location</label>
            </value>
            <value>
                <fullName>Multi Central</fullName>
                <isActive>false</isActive>
                <label>Multi Central</label>
            </value>
            <value>
                <fullName>Multi Large</fullName>
                <isActive>false</isActive>
                <label>Multi Large</label>
            </value>
            <value>
                <fullName>Multi Medium</fullName>
                <isActive>false</isActive>
                <label>Multi Medium</label>
            </value>
            <value>
                <fullName>Multi Small</fullName>
                <isActive>false</isActive>
                <label>Multi Small</label>
            </value>
            <value>
                <fullName>Pre booked</fullName>
                <isActive>false</isActive>
                <label>Pre booked</label>
            </value>
            <value>
                <fullName>Single Medium</fullName>
                <isActive>false</isActive>
                <label>Single Medium</label>
            </value>
            <value>
                <fullName>Single Small</fullName>
                <isActive>false</isActive>
                <label>Single Small</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>