force-app/main/default/objects/Account/fields/Enqix_CollnDataReqd__c.field-meta.xml
<CustomField>
    <fullName>Enqix_CollnDataReqd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CollnDataReqd</label>
    <type>Checkbox</type>
</CustomField>