force-app/main/default/objects/Account/fields/Enqix_ContractReviewDate__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ContractReviewDate__c</fullName>
    <label>ContractReviewDate</label>
    <type>DateTime</type>
</CustomField>