force-app/main/default/objects/Account/fields/Enqix_Credit_Account__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Credit_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Account</label>
    <type>Checkbox</type>
</CustomField>