force-app/main/default/objects/Account/fields/Enqix_Credit_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Credit_Approved_Date__c</fullName>
    <label>Credit Approved Date</label>
    <type>DateTime</type>
</CustomField>