force-app/main/default/objects/Account/fields/Enqix_Date_Made_Dead__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Date_Made_Dead__c</fullName>
    <label>Enqix Date Made Dead</label>
    <type>Date</type>
</CustomField>