force-app/main/default/objects/Account/fields/Enqix_Date_Made_Live__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Date_Made_Live__c</fullName>
    <label>Enqix Date Made Live</label>
    <type>Date</type>
</CustomField>