force-app/main/default/objects/Account/fields/Enqix_DateInserted__c.field-meta.xml
<CustomField>
    <fullName>Enqix_DateInserted__c</fullName>
    <label>Enqix_DateInserted</label>
    <type>DateTime</type>
</CustomField>