force-app/main/default/objects/Account/fields/Enqix_DDDiscount__c.field-meta.xml
<CustomField>
    <fullName>Enqix_DDDiscount__c</fullName>
    <description>The DDDiscount in Enqix</description>
    <label>Enqix_DDDiscount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>