force-app/main/default/objects/Account/fields/Enqix_Dead_Live__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Dead_Live__c</fullName>
    <inlineHelpText>This field is Controlled by Quick Action &quot;Set Live&quot;.</inlineHelpText>
    <label>Enqix Dead Live</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dead</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>