force-app/main/default/objects/Account/fields/Enqix_Debtors_Chaser__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Debtors_Chaser__c</fullName>
    <label>Enqix Debtors Chaser</label>
    <length>3</length>
    <type>Text</type>
</CustomField>