force-app/main/default/objects/Account/fields/Enqix_Dly_ExtraInfo__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Dly_ExtraInfo__c</fullName>
    <label>Delivery notes</label>
    <type>TextArea</type>
</CustomField>