force-app/main/default/objects/Account/fields/Enqix_ExcludeFromCustCare__c.field-meta.xml
<CustomField>
    <fullName>Enqix_ExcludeFromCustCare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExcludeFromCustCare</label>
    <type>Checkbox</type>
</CustomField>