force-app/main/default/objects/Account/fields/Enqix_FacilityMgr_Id__c.field-meta.xml
<CustomField>
    <fullName>Enqix_FacilityMgr_Id__c</fullName>
    <label>Facility Manager Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>