force-app/main/default/objects/Account/fields/Enqix_FM_Code__c.field-meta.xml
<CustomField>
    <fullName>Enqix_FM_Code__c</fullName>
    <label>FM Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>