force-app/main/default/objects/Account/fields/Enqix_Invoice_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Invoice_Delivery_Method__c</fullName>
    <label>Invoice Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>