force-app/main/default/objects/Account/fields/Enqix_Invoice_Send_Backing_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Invoice_Send_Backing_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Send Backing Sheet</label>
    <type>Checkbox</type>
</CustomField>