force-app/main/default/objects/Account/fields/Enqix_Invoice_Send_POD__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Invoice_Send_POD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Send POD</label>
    <type>Checkbox</type>
</CustomField>