force-app/main/default/objects/Account/fields/Enqix_Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Last_Order_Date__c</fullName>
    <label>Enqix Last Order Date</label>
    <type>Date</type>
</CustomField>